# game-auto-search

./: .gitignore  CMakeLists.txt  README.md
include/: BaseProcessor.h  ScreenGrabber.h  gameInputHandler.h  screengrabber.h  utils.h
src/: BaseProcessor.cpp  ScreenGrabber.cpp  gameInputHandler.cpp  prototype.cpp  screengrabber.cpp  testing.cpp  testing_2.cpp  utils.cpp
